--- a/package.json
+++ b/package.json
@@ -6,21 +6,30 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "~51.0.21",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3",
     "react-dom": "18.2.0",
-    "react-native-web": "~0.19.10",
-    "@expo/metro-runtime": "~3.2.1",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native": "0.74.3",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/config-array": "^0.17.0",
+    "@eslint/object-schema": "^2.1.4",
     "@types/react": "~18.2.45",
+    "eslint": "^8.57.0",
+    "eslint-config-universe": "^13.0.0",
+    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-react-native": "^4.1.0",
+    "rimraf": "^4.4.1",
     "typescript": "^5.1.3"
   },
   "private": true
